// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when showing current step 1`] = `
<div
  className="components-step-index-m__step-active components-step-index-m__step"
>
  <div
    className="components-step-index-m__number"
  >
    2
  </div>
  <div
    className="components-step-index-m__title"
  >
    The Title
  </div>
</div>
`;

exports[`should render correctly when showing step after current step 1`] = `
<a
  className="components-step-index-m__step-next components-step-index-m__step"
  onClick={[Function]}
>
  <div
    className="components-step-index-m__number"
  >
    3
  </div>
  <div
    className="components-step-index-m__title"
  >
    The Title
  </div>
</a>
`;

exports[`should render correctly when showing step before current step 1`] = `
<a
  className="components-step-index-m__step-completed components-step-index-m__step"
  onClick={[Function]}
>
  <div
    className="components-step-index-m__number"
  >
    1
  </div>
  <div
    className="components-step-index-m__title"
  >
    The Title
  </div>
</a>
`;

exports[`should render correctly when showing step way after current step 1`] = `
<div
  className="components-step-index-m__step-disabled components-step-index-m__step"
>
  <div
    className="components-step-index-m__number"
  >
    6
  </div>
  <div
    className="components-step-index-m__title"
  >
    The Title
  </div>
</div>
`;

exports[`should render correctly when showing step way before current step 1`] = `
<a
  className="components-step-index-m__step-completed components-step-index-m__step"
  onClick={[Function]}
>
  <div
    className="components-step-index-m__number"
  >
    1
  </div>
  <div
    className="components-step-index-m__title"
  >
    The Title
  </div>
</a>
`;
